# jnk

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/lib/: ast.rs  context.rs  error.rs  lib.rs  parser.rs
src/lib/grammar/: math.pest
tests/: eval.rs  math_context.rs
