[package]
publish = false
name = "jnk"
version = "0.1.0"
description = "Jenna's Number Kruncher: a library for parsing math expressions."
authors = ["Jenna Fligor <jenna@fligor.net>"]
license = "MIT"
edition = "2021"

[lib]
name = "jnk"
path = "src/lib/lib.rs"

[[bin]]
name = "jnk"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
pest = "2.6.0"
pest_derive = "2.6.0"
rug = "1.19.2"
thiserror = "1.0.40"
