[package]
name = "jnk"
version = "0.1.0"
description = "Jenna's Number Kruncher: a library for parsing math expressions."
authors = ["Jenna Fligor"]
license = "MIT"
edition = "2021"

[lib]
name = "jnk"
path = "src/lib/lib.rs"

[[bin]]
name = "jnk"
path = "src/bin/jnk/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.18"
pest = "2.6.0"
pest_derive = "2.6.0"
rug = "1.19.2"
rustyline = "11.0.0"
thiserror = "1.0.40"
