[package]
name = "jnk"
version = "0.2.1"
description = "Jenna's Number Kruncher: a library for parsing math expressions."
authors = ["Jenna Fligor"]
license = "MIT"
repository = "https://github.com/Ex-32/jnk/"
edition = "2021"

[lib]
name = "jnk"
path = "src/lib/lib.rs"

[[bin]]
name = "jnk"
path = "src/bin/jnk/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
color-eyre = "0.6.2"
once_cell = "1.18.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
pest = "2.7.2"
pest_derive = "2.7.2"
rug = "1.21.0"
rustyline = "12.0.0"
thiserror = "1.0.47"
